# phaser-encodings

./: README.md  phaser-encodings.cabal  stack.yaml
src/Codec/Phaser/Encodings/: Autodetect.hs  EBDIC.hs  Macintosh.hs
