name:                phaser-encodings
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/quickdudley/phaser-encodings#readme
license:             BSD3
license-file:        LICENSE
author:              Jeremy List
maintainer:          quick.dudley@gmail.com
copyright:           BSD3
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Codec.Phaser.Encodings.Autodetect
                       Codec.Phaser.Encodings.Macintosh
                       Codec.Phaser.Encodings.EBDIC
  build-depends:       base >= 4.7 && < 5
                       phaser >= 1.0.0.1 && < 2.0.0.0
  default-language:    Haskell2010

test-suite phaser-encodings-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
    phaser-encodings
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/quickdudley/phaser-encodings
